--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,9 @@
     "dependencies": [
         {
             "name": "legacy-script-engine-quickjs"
+        },
+        {
+            "name": "GMLIB-LegacyRemoteCallApi"
         }
     ]
 }
