--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ steps.version.outputs.version }}
-        release_name: Guild ${{ steps.version.outputs.version }}
+        release_name: Guild-${{ steps.version.outputs.version }}
         draft: false
         prerelease: false
 
